@@ -1,3 +1,14 @@
+2025-02-13  Stefan Kangas  <stefankangas@gmail.com>
+
+	Avoid cl-caaar etc. compatibility aliases in Tramp
+
+	* tramp-gvfs.el (tramp-gvfs-handler-askquestion):
+	(tramp-gvfs-handler-mounted-unmounted):
+	(tramp-gvfs-connection-mounted-p):
+	* tramp-sh.el (tramp-sh-gio-monitor-process-filter):
+	(tramp-sh-inotifywait-process-filter): Don't use cl-caaar
+	etc. compatibility aliases.  (Bug#76249)
+
 2025-02-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-gvfs.el (tramp-gvfs-monitor-process-filter):
